--- a/src/pages/includes/create-new-wallet/create-new-wallet.html
+++ b/src/pages/includes/create-new-wallet/create-new-wallet.html
@@ -2,9 +2,9 @@
   <div action-card-header>
     <img src="assets/img/add-wallet/wallet.svg" />
   </div>
-  <div action-card-title translate>Create a Profile</div>
+  <div action-card-title translate>Create a Group of Wallets</div>
   <div action-card-body translate>
-    Now it's time for you to create a profile and wallets to store your funds into.
+    In order to create a wallet on your device, you’ll need to create a secure group of wallets to store them into
   </div>
   <div action-card-button translate (click)="goToAddWalletPage()" tappable>
     Get Started
