--- a/src/components/wallet-selector/wallet-selector.html
+++ b/src/components/wallet-selector/wallet-selector.html
@@ -7,38 +7,24 @@
     </ion-col>
     <ion-col col-4 text-center class="destination-title">{{ title }}</ion-col>
   </ion-row>
-  <!--<div *ngFor="let wallet of wallets" (click)="selectWallet(wallet)">{{wallet.name}}</div>-->
-  <div class="no-wallets" *ngIf="(!walletsBtc || !walletsBtc[0]) && (!walletsBch || !walletsBch[0])" translate>
+  <div class="no-wallets" *ngIf="!walletsGroups" translate>
     No wallets available
   </div>
-  <div *ngIf="walletsBtc && walletsBtc[0]">
-    <ion-item-divider>
-      <div class="title">
-        <span translate>Bitcoin Wallets</span>
-      </div>
-    </ion-item-divider>
+  <div *ngIf="walletsGroups">
+    <div *ngFor="let walletsGroup of walletsGroups">
+      <ion-item-divider>
+        <div class="title">
+          <span translate>{{walletsGroup[0].groupName}}</span>
+        </div>
+      </ion-item-divider>
 
-    <ion-list>
-      <button ion-item detail-none *ngFor="let wallet of walletsBtc" (click)="optionClicked(wallet)">
-        <wallet-item-content [wallet]="wallet"></wallet-item-content>
-      </button>
-    </ion-list>
-  </div>
-
-  <div *ngIf="walletsBch && walletsBch[0]">
-    <ion-item-divider>
-      <div class="title">
-        <span translate>Bitcoin Cash Wallets</span>
-      </div>
-    </ion-item-divider>
-
-    <ion-list>
-      <div>
-        <button ion-item detail-none *ngFor="let wallet of walletsBch" (click)="optionClicked(wallet)">
+      <ion-list>
+        <button ion-item detail-none *ngFor="let wallet of walletsGroup" (click)="optionClicked(wallet)">
           <wallet-item-content [wallet]="wallet"></wallet-item-content>
         </button>
-      </div>
-    </ion-list>
+      </ion-list>
+    </div>
   </div>
+
   <ion-item-divider></ion-item-divider>
 </action-sheet>
