--- a/src/pages/send/amount/amount.scss
+++ b/src/pages/send/amount/amount.scss
@@ -14,8 +14,7 @@ page-amount {
     flex-direction: column;
   }
   .amount-header-margin {
-    margin: 2rem;
-    margin-bottom: 0;
+    margin: 0 24px 40px 0;
     @media (max-height: $short-screen) {
       margin: 1.5rem;
       margin-bottom: 0;
@@ -51,11 +50,10 @@ page-amount {
     padding-top: -webkit-calc(env(safe-area-inset-top));
   }
   .amount-header {
-    flex: 1;
     display: flex;
     width: 100%;
     position: relative;
-    align-items: center;
+    justify-content: flex-end;
     .switcher {
       @media (max-height: $short-screen) {
         width: 77px;
@@ -98,6 +96,7 @@ page-amount {
     align-items: center;
     width: 100%;
     flex-grow: 1;
+    padding: 39px 39px 100px 39px;
     .expression-container {
       display: flex;
       align-items: center;
