--- a/src/pages/send/amount/amount.scss
+++ b/src/pages/send/amount/amount.scss
@@ -7,18 +7,19 @@ page-amount {
   ion-content.content {
     background: white;
   }
+  .wide-header__title {
+    display: none;
+  }
   $short-screen: 570px;
   .amount-wrapper {
     height: 100%;
     display: flex;
     flex-direction: column;
   }
-  .amount-header-margin {
+  .amount-switcher-margin {
     margin: 0 24px 40px 0;
     @media (max-height: $short-screen) {
-      margin: 1.5rem;
-      margin-bottom: 0;
-      margin-top: 1rem;
+      margin: 1rem;
     }
   }
   .next-button {
@@ -49,7 +50,7 @@ page-amount {
     padding-top: calc(env(safe-area-inset-top));
     padding-top: -webkit-calc(env(safe-area-inset-top));
   }
-  .amount-header {
+  .amount-switcher {
     display: flex;
     width: 100%;
     position: relative;
@@ -96,7 +97,10 @@ page-amount {
     align-items: center;
     width: 100%;
     flex-grow: 1;
-    padding: 39px 39px 100px 39px;
+    padding: 39px;
+    @media (max-height: $short-screen) {
+      padding-bottom: 10px;
+    }
     .expression-container {
       display: flex;
       align-items: center;
@@ -108,6 +112,7 @@ page-amount {
         @media (max-height: $short-screen) {
           font-size: 40px;
           line-height: 40px;
+          padding: 0px;
         }
       }
       .unit {
@@ -128,16 +133,6 @@ page-amount {
       @media (max-height: $short-screen) {
         font-size: 14px;
         margin-top: 15px;
-      }
-    }
-  }
-  pin-pad {
-    .row {
-      ion-col.col {
-        min-height: 60px;
-        @media (max-height: $short-screen) {
-          min-height: 50px;
-        }
       }
     }
   }
