Dark mode option. Home tab. First approach

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -84,7 +84,7 @@ ion-header.bp-header .toolbar {
   }
 }
 .wide-header__title {
-  color: black;
+  color: $text-color;
   font-size: 25px;
   font-weight: 700;
   padding-top: 10px;
