--- a/src/pages/wallet-details/wallet-details.scss
+++ b/src/pages/wallet-details/wallet-details.scss
@@ -24,7 +24,7 @@ page-wallet-details {
   }
 
   .toolbar-background {
-    background: $wallet-details-primary-color;
+    background: $wallet-details-primary-color !important;
   }
 
   ion-title {
