--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,7 +12,7 @@ page-home {
       margin-left: 0px;
     }
     .total-amount-value {
-      color: $text-color;
+      color: #000000;
       font-size: 38px;
       line-height: 56px;
       font-weight: 700;
@@ -72,7 +72,7 @@ page-home {
     &-background {
       width: 90%;
       border-radius: 12px;
-      background-color: $message-background;
+      background-color: #f9f9fb;
       margin: 0 auto;
       .line-divider {
         margin: 0px 15px;
