--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -17,8 +17,6 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 // Override - Homogenized ionic component styles
 
-@import 'light';
-@import 'dark';
 @import 'icons';
 @import 'lists';
 @import 'overrides';
@@ -48,6 +46,12 @@ $background-colors: (
   info: #eff1f8
 );
 
+// App background color
+$background-color: white;
+// Item list background color
+$list-background-color: #ffffff;
+$feather-dark: #f8f8f9;
+$feather: #fbfbff;
 // Refresh color
 $refresher-icon-color: color($colors, primary);
 $refresher-icon-font-size: 12px;
@@ -55,6 +59,8 @@ $refresher-height: 120px;
 $refresher-border-color: none;
 // Toolbar
 $toolbar-text-color: color($colors, light);
+// Main color
+$text-color: color($colors, dark);
 // Border light
 $list-border-color: color($colors, light);
 // Toolbar
@@ -78,7 +84,6 @@ $text-input-md-show-valid-highlight: transparent;
 // iOS only Sass variables can go here
 $tabs-ios-background: color($colors, blank);
 $tabs-ios-border-color: rgba(0, 0, 0, 0.1);
-$item-ios-divider-background: $background-color;
 $item-ios-divider-color: color($colors, grey);
 $item-ios-padding-top: 16px;
 $item-ios-padding-bottom: 16px;
@@ -96,7 +101,6 @@ $toolbar-ios-title-font-weight: 400;
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-$item-md-divider-background: $background-color;
 $item-md-divider-color: color($colors, grey);
 $item-md-padding-top: 16px;
 $item-md-padding-bottom: 16px;
@@ -125,6 +129,9 @@ $button-md-clear-background-color-hover: transparent;
 // so that the above variables are used and Ionic's
 // default are overridden.
 @import 'ionic.theme.default';
+@import 'dark';
+@import 'light';
+
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see:
