--- a/src/theme/light.scss
+++ b/src/theme/light.scss
@@ -1,2 +1,35 @@
-// .light-theme {
-// }
+.light-theme {
+  // Uses default values. This is just to make a smooth transition between themes
+  @mixin transition {
+    transition: background-color, color, 250ms cubic-bezier(0, 0, 0.3, 0.3) !important;
+  }
+
+  // General -----
+  .toolbar-background-md {
+    @include transition();
+  }
+
+  .toolbar-title {
+    @include transition();
+  }
+
+  .header .toolbar-background {
+    @include transition();
+  }
+  .tabs-md,
+  .tabs-ios {
+    .tabbar {
+      @include transition();
+    }
+  }
+
+  // Lists -----
+  .bp-list {
+    .item {
+      &.item-ios,
+      &.item-md {
+        @include transition();
+      }
+    }
+  }
+}
