--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -385,8 +385,20 @@
       background-color: $background-secondary-dark-theme;
       color: $text-color-dark-theme;
     }
+    .wallet,
+    .multi-recip-title {
+      span {
+        color: $text-color-dark-theme;
+      }
+    }
+    .bp-list {
+      ion-note.note {
+        .note-container {
+          color: $text-color-dark-theme;
+        }
+      }
+    }
   }
-
   page-wallet-details {
     ion-content {
       background: linear-gradient(
@@ -722,5 +734,58 @@
       background-color: $background-secondary-dark-theme;
       border-bottom: 1px solid $background-secondary-dark-theme;
     }
+  }
+  memo-component {
+    .text-input {
+      background-color: $background-color-dark-theme;
+      color: $text-color-dark-theme;
+    }
+    .title {
+      color: $text-color-dark-theme;
+    }
+  }
+  page-choose-fee-level {
+    .testnet-warning {
+      background-color: color($colors, warning);
+    }
+
+    .fee {
+      &-speed-name {
+        color: $text-color-dark-theme;
+      }
+      &-speed-satByte {
+        color: $text-color-dark-theme;
+      }
+      &-avg-label {
+        color: $text-color-dark-theme;
+      }
+      &-avg-time {
+        color: $text-color-dark-theme;
+      }
+      &-card {
+        background-color: $background-color-dark-theme;
+        .item {
+          &.item-ios,
+          &.item-md {
+            background: $background-color-dark-theme;
+            color: $text-color-dark-theme;
+          }
+        }
+      }
+    }
+  }
+  page-slide-to-accept {
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 1)
+    );
+    background: -webkit-linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 1)
+    );
   }
 }
